# jlog

./: .gitignore  CMakeLists.txt  README.org  build.sh  config.h.in  jlog.h
examples/: CMakeLists.txt  client.cpp  client.h  jlogd.cpp  server.cpp  server.h
jlog/: CMakeLists.txt  buffer.h  client.h  common.h  jlog_inner_inc.h  jlogd.h  logger.h  logger_impl.h  registry.h  server.h  singleton.h
src/: CMakeLists.txt  logger.h  logger_impl.cpp  logger_impl.h  registry.h  server.cpp
tests/: CMakeLists.txt  buffer_test.cpp  logger_test.cpp
