cmake_minimum_required(VERSION 3.7)
set(JLOG_VERSION_MAJOR 1)
set(JLOG_VERSION_MINOR 0)
set(PROJECT_NAME "jlog")
project(${PROJECT_NAME})
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
link_directories(${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
set(CMAKE_BUILD_TYPE Debug)
add_subdirectory(jlog)
add_subdirectory(examples)
add_subdirectory(tests)
include_directories(jlog)
